Closed
Bug 608202
Opened 15 years ago
Closed 15 years ago
xpcshell: new test_attachment_size.js fails, "ASSERTION: nothing to write!: 'dest >= line && dest < src' ... mimeenc.cpp, line 757" in yenc test
Categories
(MailNews Core :: Composition, defect)
MailNews Core
Composition
Tracking
(Not tracked)
VERIFIED
FIXED
Thunderbird 3.3a2
People
(Reporter: sgautherie, Assigned: mnyromyr)
References
()
Details
(Keywords: assertion, Whiteboard: [perma-orange])
Attachments
(1 file)
|
794 bytes,
patch
|
standard8
:
review+
|
Details | Diff | Splinter Review |
I would guess SeaMonkey misses the msgHdrViewOverlay.js update:
http://hg.mozilla.org/comm-central/diff/41df9e16a197/mail/base/content/msgHdrViewOverlay.js
| Reporter | ||
Comment 1•15 years ago
|
||
| Reporter | ||
Updated•15 years ago
|
Blocks: SmTestFail
Whiteboard: [perma-orange]
Comment 2•15 years ago
|
||
It looks like something is going wrong at a much lower level than msgHdrViewOverlay.js. That shouldn't affect the xpcshell tests (I certainly didn't intend for them to be affected by mail/ stuff).
Do you know if the load() calls in test_attachment_size.js would end up pointing to different versions of those scripts? For example:
load("../../../resources/mailDirService.js");
Incidentally, at least on Linux, the failure[1] is with yEnc attachments which, as far as I know, hasn't been touched recently. Those tests are testing changes from bug 561851, but it's possible that yEnc attachments are just plain broken in Seamonkey for other reasons.
[1] http://mxr.mozilla.org/comm-central/source/mailnews/mime/src/mimeenc.cpp#757
| Reporter | ||
Comment 3•15 years ago
|
||
This test passes on my local Windows 2000, with an Opt tinderbox-build:
I get "Context: test.test:6 state: finished".
(I can't run Debug builds anymore.)
*****
(In reply to comment #2)
> Do you know if the load() calls in test_attachment_size.js would end up
> pointing to different versions of those scripts?
No, they don't.
> Incidentally, at least on Linux, the failure[1] is with yEnc attachments
Yes, test 6: on Windows too.
Summary: [SeaMonkey] xpcshell: new test_attachment_size.js fails, "ASSERTION: nothing to write!: 'dest >= line && dest < src' ... mimeenc.cpp, line 757" → [SeaMonkey, Debug] xpcshell: new test_attachment_size.js fails, "ASSERTION: nothing to write!: 'dest >= line && dest < src' ... mimeenc.cpp, line 757" in yenc test
| Reporter | ||
Comment 4•15 years ago
|
||
(In reply to comment #2)
> it's possible that yEnc attachments are just plain broken
> in Seamonkey for other reasons.
Fwiw, the Windows assertion stack has nothing SeaMonkey-specific.
Does this test passes on Debug Thunderbird?
Comment 5•15 years ago
|
||
Mark, Karsten, any specific ideas?
| Reporter | ||
Updated•15 years ago
|
blocking-seamonkey2.1: --- → ?
status-thunderbird5.0:
--- → ?
| Reporter | ||
Comment 6•15 years ago
|
||
As this is the only xpcshell SeaMonkey perma-orange atm, I would suggest to disable this test for (Debug) SeaMonkey ftb.
Karsten, would you accept that?
Keywords: helpwanted
Whiteboard: [perma-orange] → [ToDo: comment 4] [perma-orange]
| Assignee | ||
Comment 7•15 years ago
|
||
Lemme have a deeper look first.
Shallow digging tonight showed that the yencoded test attachment is causing the problem, all other test messages are processed fine.
Comment 8•15 years ago
|
||
This doesn't appear to affect Thunderbird -> unaffected.
I've no idea why this would be Seamonkey Debug specific, unless there's some pref that's tweaked differently.
Comment 9•15 years ago
|
||
Ok, this test does fail for me when run locally. Doesn't affect tinderbox for Thunderbird at the moment, so this falls in the generally wanted category.
status-thunderbird5.0:
unaffected → ---
Flags: wanted-thunderbird+
| Assignee | ||
Comment 10•15 years ago
|
||
The assertion is broken: "dest < src" will only work if the yenc encoding contains escaped characters - which our test does not.
(Furthermore, "dest >= line" is very unlikely to fail, but doesn't hurt.)
Assignee: nobody → mnyromyr
Status: NEW → ASSIGNED
Attachment #490743 -
Flags: superreview?(bugzilla)
Attachment #490743 -
Flags: review?(bugzilla)
| Reporter | ||
Updated•15 years ago
|
No longer blocks: SmTestFail
Keywords: helpwanted
Whiteboard: [ToDo: comment 4] [perma-orange] → [perma-orange]
| Reporter | ||
Updated•15 years ago
|
Summary: [SeaMonkey, Debug] xpcshell: new test_attachment_size.js fails, "ASSERTION: nothing to write!: 'dest >= line && dest < src' ... mimeenc.cpp, line 757" in yenc test → xpcshell: new test_attachment_size.js fails, "ASSERTION: nothing to write!: 'dest >= line && dest < src' ... mimeenc.cpp, line 757" in yenc test
| Reporter | ||
Comment 11•15 years ago
|
||
(In reply to comment #0)
> I would guess SeaMonkey misses the msgHdrViewOverlay.js update:
> http://hg.mozilla.org/comm-central/diff/41df9e16a197/mail/base/content/msgHdrViewOverlay.js
Karsten, though unrelated to the test failure, you might still want to port this.
| Assignee | ||
Comment 12•15 years ago
|
||
(In reply to comment #11)
> > http://hg.mozilla.org/comm-central/diff/41df9e16a197/mail/base/content/msgHdrViewOverlay.js
>
> Karsten, though unrelated to the test failure, you might still want to port
> this.
True, but that's totally out of scope here.
Comment 13•15 years ago
|
||
Comment on attachment 490743 [details] [diff] [review]
fix assertion
r=Standard8, this looks fine. No sr required.
Attachment #490743 -
Flags: superreview?(bugzilla)
Attachment #490743 -
Flags: review?(bugzilla)
Attachment #490743 -
Flags: review+
| Assignee | ||
Comment 14•15 years ago
|
||
Pushed to comm-central as <http://hg.mozilla.org/comm-central/rev/7f98b2c78c31>.
Status: ASSIGNED → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
| Reporter | ||
Comment 15•15 years ago
|
||
V.Fixed, per
http://tinderbox.mozilla.org/showlog.cgi?log=SeaMonkey/1290136847.1290139365.2471.gz
Linux comm-central-trunk debug test xpcshell on 2010/11/18 19:20:47
and
http://tinderbox.mozilla.org/showlog.cgi?log=SeaMonkey/1290139855.1290143292.19291.gz
WINNT 5.2 comm-central-trunk debug test xpcshell on 2010/11/18 20:10:55
Status: RESOLVED → VERIFIED
blocking-seamonkey2.1: ? → ---
Flags: in-testsuite-
Target Milestone: --- → Thunderbird 3.3a2
You need to log in
before you can comment on or make changes to this bug.
Description
•