Bug 608202: xpcshell: new test_attachment_size.js fails; r=Standard8 [CLOSED TREE]